# ShortsAnalyzer

./: .gitignore  PROJECT_CONTEXT.md  main.py  pyproject.toml
.cursor/rules/: project.mdc.txt
.env/: env
knowledge/: channel_profile.json  duration.json  hashtags.json  keywords.json  patterns.json  posting.json  statistics.json  title.json  trend.json
output/: videos.csv
src/shorts_analyzer/: __init__.py  export.py  statistics.py  youtube.py
src/shorts_analyzer/ai/: __init__.py  openai_provider.py  provider.py
src/shorts_analyzer/analysis/: __init__.py  duration.py  hashtag.py  keyword.py  pattern.py  posting.py  title.py  trend.py
src/shorts_analyzer/assets/: __init__.py  collector.py  pexels_downloader.py
src/shorts_analyzer/audio/: __init__.py  voicevox.py
src/shorts_analyzer/generation/: __init__.py  idea_generator.py  prompt_builder.py  scene_planner.py  script_generator.py  script_scorer.py
src/shorts_analyzer/knowledge/: __init__.py  exporter.py  profile.py
src/shortsanalyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: shorts_trivia.md
